[gd_scene load_steps=7 format=2]

[ext_resource path="res://theme/theme_btn_normal.tres" type="StyleBox" id=1]
[ext_resource path="res://theme/theme_btn_focus.tres" type="StyleBox" id=2]
[ext_resource path="res://theme/terminus.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://main_screen/BtnNewgame.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.666667 )

[sub_resource type="DynamicFont" id=2]
size = 22
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="BtnNewgame" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefaultLabel" type="Label" parent="."]
anchor_right = 0.99975
anchor_bottom = 0.999556
margin_right = 0.32
margin_bottom = 0.319999
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HoveredLabel" type="Label" parent="."]
visible = false
anchor_right = 0.99975
anchor_bottom = 0.332889
margin_right = 0.32
margin_bottom = 0.319999
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.03125
anchor_top = 0.333333
anchor_right = 0.984375
anchor_bottom = 0.986111
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = false
mouse_filter = 2
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="focus_entered" from="." to="." method="_on_BtnNewgame_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_BtnNewgame_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_BtnNewgame_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_BtnNewgame_mouse_exited"]
